...
                                                <rect key="frame" x="34.5" y="0.0" width="199.5" height="40"/>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9NM-jP-xa3">
                                                <rect key="frame" x="234" y="0.0" width="140" height="40"/>
                                                <color key="backgroundColor" name="AccentColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="changeCurrency"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="140" id="nVf-Vc-OCn"/>
                                                </constraints>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="change Currency">
                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ID7-sK-3s3">
                                        <rect key="frame" x="0.0" y="50" width="374" height="40"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7FW-nC-WvD">
                                                <rect key="frame" x="0.0" y="0.0" width="279.5" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="inputTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryP-qV-Cy2">
                                                <rect key="frame" x="289.5" y="0.0" width="84.5" height="40"/>
                                                <color key="backgroundColor" name="AccentColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="calculateButton"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="Calculate">
                                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </buttonConfiguration>
                                                <connections>
                                                    <action selector="convertButtonPressedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SAW-DX-zsM"/>
...
                    <view key="view" contentMode="scaleToFill" id="jfv-Ht-0BW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EIp-ta-eEa">
                                <rect key="frame" x="330" y="77" width="59" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="DoneButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Done"/>
                                <connections>
                                    <action selector="doneButtonPressedWithSender:" destination="LfN-L2-Foy" eventType="touchUpInside" id="Xwc-xU-Uyr"/>
                                </connections>
                            </button>
...
